cabal-version:      3.0
name:               ml-haskell
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Stephane
maintainer:         stephstephg@gmail.com
synopsis:           ML in Haskell
description:        machine learning in Haskell
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/stephstephg/ml-haskell

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable ml-haskell-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        ml-haskell
    hs-source-dirs:   app
    default-language: Haskell2010


executable linear-exe
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        ml-haskell
    hs-source-dirs:   app/linear
    default-language: Haskell2010


test-suite ml-haskell-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        ml-haskell
